java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/Link2.java

/// [#<error descr="Cannot resolve symbol '#baz()'">baz</error>()]
/// {@link #<error descr="Cannot resolve symbol 'baz()'">baz</error>()}
class Test {
  public void foo() {}

}